# VibeSkua-Linux

./: .gitignore  BUILD.md  BuildRelease.bat  CHANGELOG.md  CLAUDE.md  CompileOnly.bat  Directory.Build.props  FunctionBasedSkills_Documentation.md  LICENSE  LINUX.md  README.md  Skua.Linux.sln  Skua.sln
.github/workflows/: linux-build.yml  release-linux.yml
Skua.AS3/: compile-as3.ps1
Skua.App.Console/: Program.cs  Skua.App.Console.csproj
Skua.App.WPF/: App.xaml.cs  EmbeddedMainWindow.xaml  EmbeddedMainWindow.xaml.cs  MainWindow.xaml  Program.cs  SettingsService.cs  Skua.App.WPF.csproj  TabbedHostWindow.xaml  TabbedHostWindow.xaml.cs
Skua.App.WPF.Follower/: App.xaml.cs  MainWindow.xaml  Skua.App.WPF.Follower.csproj
Skua.App.WPF.Follower/Properties/: launchSettings.json
Skua.App.WPF.Lite/: MainWindow.xaml
Skua.App.WPF.Sync/: App.xaml.cs  MainWindow.xaml  SettingsService.cs
Skua.Avalonia/: App.axaml  App.axaml.cs  Program.cs  Skua.Avalonia.csproj  ViewLocator.cs  app.manifest
Skua.Avalonia.Tests/: ArmyBusTests.cs  BootTests.cs  CompilerCacheVersionTests.cs  DialogHostTests.cs  HotKeyServiceTests.cs  InventoryDeserializationTests.cs  MemoryTrimmerTests.cs  OptionDialogTests.cs  OptionPersistenceTests.cs  SessionLogTests.cs  SettingsPersistenceTests.cs  Skua.Avalonia.Tests.csproj  TestApp.cs  ThemeServiceTests.cs  WindowServiceTests.cs
Skua.Avalonia/Services/: ArmyBus.cs  ArmyMessageHandler.cs  ClientLauncher.cs  ClientStartup.cs  ClipboardService.cs  DialogService.cs  DispatcherService.cs  FileDialogService.cs  GameSession.cs  HotKeyService.cs  MemoryTrimmer.cs  ProcessService.cs  ScreenshotService.cs  SessionLog.cs  SettingsService.cs  SoundService.cs  ThemeService.cs  TrayNotifier.cs  WindowService.cs
Skua.Avalonia/ViewModels/: GameViewModel.cs  MainWindowViewModel.cs
Skua.Avalonia/Views/: AboutView.axaml  AboutView.axaml.cs  AccountManagerView.axaml  AccountManagerView.axaml.cs  AdvancedSkillEditorView.axaml  AdvancedSkillEditorView.axaml.cs  AdvancedSkillsView.axaml  AdvancedSkillsView.axaml.cs  AppUpdaterView.axaml  AppUpdaterView.axaml.cs  ApplicationOptionsView.axaml  ApplicationOptionsView.axaml.cs  ApplicationThemesView.axaml  ApplicationThemesView.axaml.cs  AssignHotKeyDialogView.axaml  AssignHotKeyDialogView.axaml.cs  AuraCheckView.axaml  AuraCheckView.axaml.cs  AutoView.axaml  AutoView.axaml.cs  BackgroundThemeView.axaml  BackgroundThemeView.axaml.cs  BoostsView.axaml  BoostsView.axaml.cs  CBOClassEquipmentView.axaml  CBOClassEquipmentView.axaml.cs  CBOClassSelectView.axaml  CBOClassSelectView.axaml.cs  CBOLoadoutView.axaml  CBOLoadoutView.axaml.cs  CBOOtherOptionsView.axaml  CBOOtherOptionsView.axaml.cs  CBOptionsView.axaml  CBOptionsView.axaml.cs  ChangeLogsView.axaml  ChangeLogsView.axaml.cs  ClientUpdatesView.axaml  ClientUpdatesView.axaml.cs  ColorSchemeEditorView.axaml  ColorSchemeEditorView.axaml.cs  (+94 more)
Skua.Core/: Compiler.cs  ScriptLoadContext.cs  Skua.Core.csproj
Skua.Core.Interfaces/: IHotKey.cs  Skua.Core.Interfaces.csproj
Skua.Core.Interfaces/Flash/: IFlashUtil.cs
Skua.Core.Interfaces/Scripts/: IScriptOption.cs  IScriptServers.cs  IScriptSkill.cs
Skua.Core.Interfaces/Services/: IDiscordWebhookService.cs  ILoadoutService.cs  ISettingsService.cs
Skua.Core.Interfaces/Skills/: ISkillProvider.cs
Skua.Core.Models/: SettingsModels.cs  Skua.Core.Models.csproj
Skua.Core.Models/Converters/: FlexibleIntegerConverter.cs  GameObjectJson.cs  IntConverter.cs
Skua.Core.Models/Items/: LoadoutProfile.cs
Skua.Core.Models/Skills/: AdvancedSkill.cs  AdvancedSkillJsonModels.cs
Skua.Core.Utils/: HttpClients.cs  MemoryUtils.cs
Skua.Core/AppStartup/: CoreBots.cs  HotKeys.cs  MainMenu.cs  ManagedWindows.cs  (+3 more)
Skua.Flash.Linux/: GameRenderer.cs  NativeMethods.cs  RuffleFlashUtil.cs  Skua.Flash.Linux.csproj  WinFormsShim.cs
Skua.Manager/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsService.cs  Skua.Manager.csproj
Skua.Plugin.DailyTracker/: Class1.cs  DailyTrackerPlugin.cs  DailyTrackerWindow.xaml  DailyTrackerWindow.xaml.cs  Skua.Plugin.DailyTracker.csproj
Skua.WPF/: BotWindow.xaml.cs  CustomWindow.cs  HostWindow.xaml.cs  PropertyGrid.xaml.cs  Skua.WPF.csproj
native/: .gitignore  prepare-ruffle-fork.sh  ruffle-skua-inject.patch
native/skua-flash-bridge/: Cargo.toml  README.md
native/skua-flash-bridge/examples/: boot_skua.rs
native/skua-flash-bridge/include/: skua_flash.h
native/skua-flash-bridge/src/: ffi.rs  lib.rs  navigator.rs  render.rs  render_ffi.rs  ruffle_runtime.rs  runtime.rs  value.rs  xml.rs
native/skua-flash-bridge/tests/: roundtrip.rs  ruffle_inject.rs  ruffle_render.rs  ruffle_roundtrip.rs
packaging/: .gitignore  build-appimage.sh
(+90 files in other folders)
